--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background: transparent;" >
 <head>
   <meta charset="utf-8">
   <title>ElectronNgApp</title>
-  <base href="/">
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="background: transparent;">
   <app-root></app-root>
 </body>
 </html>
